fix ActivityRecordQuery and ToiletRecordQuery to return only existing records